# enzope

./: .gitignore  LICENSE  __init__.py  pyproject.toml  setup--.cfg  setup.cfg  setup.py
enzope/: __init__.py
enzope.egg-info/: PKG-INFO  SOURCES.txt
enzope/graphs/: __init__.py  graph_class.py
enzope/kernels/: k_ys.py  locks.py  measures.py
enzope/measures/: gpu_measures.py  measures.py
enzope/model/: model.py
enzope/models/: model.py
enzope/trades/: ys.py
src/: test.ipynb  test.py
src/enzope/: __init__.py
src/enzope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/enzope/graphs/: custom_gtg.py  graph_class.py
src/enzope/kernels/: k_ys.py  k_ys_gpt_features.py  locks.py
src/enzope/metrics/: gpu_measures.py  measures.py
src/enzope/models/: model.py  model_gpt_features.py
src/graphs/: custom_gtg.py  graph_class.py  graphs.py
src/kernels/: k_ys.py  locks.py
src/model/: model_gpu.py
tests/: Como actualizar el paquete  test.ipynb  test.py  testimports.ipynb
tests/1 metrics/: 1metrics.ipynb
tests/1_first/: test_all.ipynb
tests/graphs/: 1_gtg_properties.ipynb  2_distr_grado.ipynb  3_caracterización_gtg_nov23.ipynb
tests/metrics/: 1metrics.ipynb  2-Palma-ratio.ipynb  2_Palma_ratio.ipynb
tests/misc/: estado_final_f_not_zero.ipynb  gini_distribucion_exponencial.ipynb  mail_test.ipynb  probando_cositas.ipynb  probando_saves.ipynb  prueba.pkl
tests/rendimiento/: cpumodel_modified.ipynb
tests/save-load/: model.pkl  probando_saves.ipynb
tests/test1/: test1.py
tests/updates/: deciles y richest.ipynb  probando todo.ipynb
(+276 files in other folders)
