[metadata]
name = enzope 
version = 0.0.3
author = Lautaro Giordano
author_email = giordanolautaro@gmail.com
description = Agent based modelling in complex networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lautarogiordano/enzope
classifiers =
    Programming Language :: Python :: 3
    Environment :: GPU :: NVIDIA CUDA
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    # Development Status :: 0 - Alpha
[options]
packages = find:
install_requires=
    numpy >= 1.24
    numba >= 0.57
    networkx >= 3.0
    